# Bgmrp

./: README.md  pyproject.toml  requirements.txt
src/: controls.py  help_view.py  home_view.py  main.py  setting_view.py
src/core/: constants.py  module.py
src/data/: blank_pack_mcmeta.py  blank_project.py  blank_sounds.py  format_version.py
src/make/: module.py
src/views/: __init__.py  help_view.py  home_view.py  main_view.py  make_view.py  setting_view.py
src/views/components/: __init__.py  borders.py  buttons.py  dialogs.py  explains.py  fields.py  nav.py  texts.py
src/views/components/borders/: border_container.py  border_image.py
src/views/components/buttons/: custom_btn.py  icon_btn.py  short_btn.py
src/views/components/explains/: small_xcontainer.py  xcontainer.py
src/views/components/fields/: multiline.py  textfield.py
src/views/components/makes/: __init__.py  edit.py  project.py  tabs.py
src/views/components/nav/: nav_item.py  navbar.py
src/views/components/texts/: body.py  headline.py  title.py
src/views/makes/: make_view.py
