[project]
name = "Bgmrp"
version = "1.1.0"
description = "Bgmrp enables you to easily make resource packs that add some BGM to Minecraft."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "arcsino", email = "" }
]
dependencies = [
    "flet>=0.82.2"
]

[dependency-groups]
dev = [
    "flet-cli>=0.82.2",
    "flet-desktop>=0.82.2",
    "flet-web>=0.82.2",
]

[tool.flet]
org = ""
product = "Bgmrp"
company = ""
copyright = "Copyright (C) 2025-2026 by arcsino"

[tool.flet.app]
path = "src"
